# sentiment-analysis

./: .gitignore  pyproject.toml
app/: main.py  read_write.py
data/raw/: sentiment_analysis.pq
