[tool.poetry]
name = "app"
version = "0.1.0"
description = ""
authors = ["arthurmpires <arthur.martinez.pires@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
pandas = "^2.2.1"
scikit-learn = "^1.4.1.post1"
pyarrow = "^15.0.0"
ipykernel = "^6.29.3"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
